package com.weddingplanner.server.exceptions;

public class ServerException extends Exception{
    public ServerException(int i, String s) {
    }
}
