@startuml

title __EXCEPTIONS's Class Diagram__\n

  namespace  {
    namespace om.weddingplanner.server {
      namespace exceptions {
        class com.weddingplanner.server.exceptions.ClientException {
            + ClientException()
            + ClientException()
        }
      }
    }
  }
  

  namespace  {
    namespace om.weddingplanner.server {
      namespace exceptions {
        class com.weddingplanner.server.exceptions.Exception {
            ~ Message : String
            ~ cause : Throwable
            ~ code : int
            + Exception()
            + Exception()
            + Exception()
            + getCause()
            + getCode()
            + getMessage()
            + setCause()
            + setCode()
            + setMessage()
        }
      }
    }
  }
  

  namespace  {
    namespace om.weddingplanner.server {
      namespace exceptions {
        class com.weddingplanner.server.exceptions.ServerException {
            + ServerException()
        }
      }
    }
  }
  

  com.weddingplanner.server.exceptions.ClientException -up-|> com.weddingplanner.server.exceptions.Exception
  com.weddingplanner.server.exceptions.ServerException -up-|> com.weddingplanner.server.exceptions.Exception


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
